# gL0Learn

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CPPLINT.cfg  DESCRIPTION  LICENSE  README.md  defaults.cfg  note_on_CodeChecker.txt  notes_on_clang_tidy.txt  suppressions.txt
.github/workflows/: R.yml  lint-project.yaml  pre-commit-hooks.yaml  python.yml  python_docs.yml  r.yml
R/: RcppExports.R  fit.R  generate_synthetic.R  generate_toeplitz.R  linear_search.R  resolve_func_name.R
benchmarking/: other_packages.Rmd  test_util.py
benchmarking/l0bnb2/: __init__.py  data_utils.py  stats_utils.py
benchmarking/l0bnb2/solvers/: __init__.py  oracle.py  utils.py
benchmarking/l0bnb2/solvers/heuristics/: __init__.py  _coordinate_descent.py  _cost.py  _local_search.py  core.py
benchmarking/l0bnb2/solvers/mosek/: __init__.py  core.py
docs/: visuals.pptx
docs/images/: overleaf-doc-for-images
inst/: WORDLIST
pypkg/: .flake8  CMakeLists.txt  README.rst  Untitled.ipynb  Untitled1.ipynb  note_on_CodeChecker.txt  notes_on_clang_tidy.txt  pyproject.toml  setup.cfg  setup.py  test_gl0learn.ipynb  tox.ini
pypkg/doc/: code.rst  conf.py  index.rst  tutorial.ipynb
pypkg/examples/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  l0_peculiarities.ipynb  mosek2.ipynb  test.opf  test1.py
pypkg/gl0learn/: __init__.py  bounds.py  fit.py  fitmodel.py  metrics.py  penalty.py  pygl0learn.cpp  synthetic.py  utils.py  version.py
pypkg/gl0learn/src/: pyfit.cpp  pyfit.h  pyfitmodel.cpp  pyfitmodel.h  pygl0learn.cpp  pyoracle.cpp  pyoracle.h
pypkg/gl0learn/src/include/: CD.h  active_set.h  fitmodel.h  gL0Learn.h  gap.h  oracle.h  pyfit.h  pyoracle.h  utils.h
pypkg/gl0learn/src/src/include/: CD.h  oracle.h  utils.h
pypkg/scripts/: openblas_support.py  test_failing_func.py  utils.py
pypkg/src/gl0learn/: __init__.py  bounds.py  fit.py  fitmodel.py  hello_py.cpp  metrics.py  opt.py  oracle.py  penalty.py  synthetic.py  utils.py
pypkg/src/gl0learn/src/: pyfit.cpp  pyfit.h  pyfitmodel.cpp  pyfitmodel.h  pygl0learn.cpp  pyoracle.h
pypkg/src/gl0learn/src/include/: CD.h  active_set.h  arma_includes.h  gL0Learn.h  gap.h  oracle.h  pyfit.h  pyfitmodel.h  pyoracle.h
pypkg/src/gl0learn/src/src/: gap.cpp  oracle.cpp
pypkg/src/gl0learn/src/src/include/: CD.h  active_set.h  arma_includes.h  fitmodel.h  gL0Learn.h  gap.h  oracle.h  utils.h
pypkg/src/hello/: __init__.py  hello_py.cpp
pypkg/tests/: conftest.py  mozek-Copy1.ipynb  mozek.ipynb  test.ipynb  test_bounds.py  test_cd.py  test_fit.py  test_fitmodel.py  test_hello.py  test_opt.py  test_penalty.py  test_utils.py
pypkg/tests/helper/: Untitled.ipynb  utils.py
pypkg/tests/utils/: utils.py
rpkg/: .Rbuildignore  .lintr  DESCRIPTION  NAMESPACE  README.md  exlude.txt
rpkg/R/: RcppExports.R  fit.R  generate_banded.R  generate_constant.R  generate_independent.R  generate_regression.R  generate_synthetic.R  generate_toeplitz.R  gl0learn-pkg.R  internals-exports.R  linear_search.R  oracle.R  utils.R
rpkg/man/: check_make_valid_coordinate_matrix.Rd  gL0Learn-package.Rd  gL0Learn.bounds.Rd  gL0Learn.generate_banded.Rd  gL0Learn.generate_constant.Rd  gL0Learn.generate_independent.Rd  gL0Learn.generate_regression.Rd  gL0Learn.generate_synthetic.Rd  gL0Learn.generate_toeplitz.Rd  gL0Learn.gfit.Rd  gL0Learn.is.real_matrix.Rd  gL0Learn.is.real_scalar.Rd  gL0Learn.is.real_vector.Rd  gL0Learn.linear_plot.Rd  gL0Learn.linear_search.Rd  gL0Learn.penalty.Rd
rpkg/src/: Makevars  Makevars.in  Makevars.win  ROracle.cpp  RTest.cpp  RcppExports.cpp  RgL0Learn.cpp
rpkg/src/include/: ROracle.h  RTest.h  RgL0Learn.h  Rutils.h
rpkg/src/src/: active_set.cpp  utils.cpp
rpkg/src/src/include/: CD.h  active_set.h  arma_includes.h  fitmodel.h  gL0Learn.h  gap.h  oracle.h  utils.h
rpkg/tests/: testthat.R
rpkg/tests/box_test/: gurobi.ipynb
rpkg/tests/testthat/: test-activeset.R  test-bindings.R  test-gL0Learn.R  test-oracle.R
rpkg/vignettes/: gL0Learn-active-set-examples.Rmd  gL0Learn-benchmark.Rmd  gL0Learn-vignette.Rmd  gL0Learn-vignette.nb.html
scripts/: dirs_check.py
src/: Makevars  RInterface.cpp  RTest.cpp  RTestInterface.cpp  RcppExports.cpp  RgL0Learn.cpp  gL0Learn.cpp  interface.cpp
src/include/: CD.h  RTest.h  RgL0Learn.h  active_set.h  arma_includes.h  fitmodel.h  gL0Learn.h  gap.h  oracle.h  oracle2.h  utils.h
tests/testthat/: test-gL0Learn.R  test-oracle.R
vignettes/: gL0Learn-active-set-examples.Rmd  gL0Learn-benchmark.Rmd  gL0Learn-vignette.Rmd  test_swap.txt  test_swap2.txt  test_swap3.txt
