[project]
name = "gl0learn"
authors = [
    {name = "Tim Nonet", email = "tim.nonet@gmail.com"},
]
maintainers = [
    {name = "Tim Nonet", email = "tim.nonet@gmail.com"},
]
description = "gL0Learn is a highly efficient framework for solving L0-regularized graphical learning problems."
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
]

dynamic = ['version']

[project.optional-dependencies]
test = ["pytest", "hypothesis>=6.50.1", "scipy"]
opt = ["numba", "mosek"]

[project.urls]
repository = "https://github.com/TNonet/gL0Learn"
issues = "https://github.com/TNonet/gL0Learn/issues"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "numpy>=1.19.0",
    "ninja",
]
build-backend = "setuptools.build_meta"